extensions/tags/less/common/TagLabel.less
.TagLabel {
  font-size: 85%;
  font-weight: 600;
  display: inline-block;
  padding: 0.1em 0.5em;
  border-radius: @border-radius;
  background: var(--tag-bg);
  color: var(--tag-color);
  text-transform: none;
  vertical-align: bottom;

  &.untagged {
    --tag-bg: transparent;
    --tag-color: @muted-color;
    border: 1px dotted;
  }

  &.colored {

    &.tag-dark {
      --tag-color: @body-bg;

      .TagLabel-text {
        color: var(--tag-color) !important;
      }
    }

    &.tag-light {
      --tag-color: @text-color;

      .TagLabel-text {
        color: var(--tag-color) !important;
      }
    }
  }

  .DiscussionHero .TagsLabel & {
    background: transparent;
    border-radius: @border-radius !important;
    font-size: 14px;

    &.colored {
      --tag-color: var(--tag-bg);
      margin-right: 5px;
      background: @body-bg !important;
    }
  }
}
.DiscussionHero--colored {
  &, a {
    color: @body-bg;
  }
}
.TagsLabel {
  .DiscussionTaggedPost & {
    margin: 0 2px;
  }

  .TagLabel {
    border-radius: 0;

    &:first-child {
      border-radius: @border-radius 0 0 @border-radius;
    }
    &:last-child {
      border-radius: 0 @border-radius @border-radius 0;
    }
    &:first-child:last-child {
      border-radius: @border-radius;
    }
  }
}

